--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <span><i class="fas fa-map-marker-alt"></i> Neema Garden Phase 5, 6 mins from Makutano ya Mwea</span>
             </div>
             <div class="copyright">
-                &copy; 2025 Neema Garden Phase 5. All Rights Reserved.
+                &copy; 2025 Njoki Rose Lynn. All Rights Reserved.
             </div>
             <div class="no-print" style="text-align: center; margin-top: 15px; font-size: 0.85rem; color: #fff; opacity: 0.9;">
                 <p>For bookings and inquiries, call Rose today to schedule your visit!</p>
