--- a/index.html
+++ b/index.html
@@ -157,17 +157,17 @@
                 </div>
             </div>
 
-            <!-- Property 6 - Standard Plot -->
+            <!-- Property 6 - Aerial Overview -->
             <div class="property">
-                <div class="sold-badge-card new-badge">NEW</div>
-                <img src="c1.jpeg" alt="Standard Plot">
+                <div class="sold-badge-card new-badge">AERIAL</div>
+                <img src="SMX_5415.jpg" alt="Aerial Overview of Neema Garden Phase 5">
                 <div class="property-overlay">
                     <div class="property-features">
-                        <span><i class="fas fa-ruler-combined"></i> 50x100ft</span>
-                        <span><i class="fas fa-map-marker-alt"></i> Beaconed</span>
-                        <span><i class="fas fa-file-contract"></i> Title Deed</span>
+                        <span><i class="fas fa-map-marked-alt"></i> Prime Location</span>
+                        <span><i class="fas fa-expand"></i> Expansive Layout</span>
+                        <span><i class="fas fa-road"></i> Well-Connected</span>
                     </div>
-                    <div class="property-location">Makutano, Mwea</div>
+                    <div class="property-location">Neema Garden Phase 5 - Bird's Eye View</div>
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
             
             <div class="footer-bottom">
                 <div class="copyright">
-                    &copy; 2025 Cledun Realtors. All Rights Reserved.
+                    &copy; 2025 Created by Njoki-cledun with 🖤 . All Rights Reserved.
                 </div>
                 <div class="footer-legal">
                     <a href="#">Privacy Policy</a>
